--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -161,6 +161,11 @@ section{
   align-items: center;
 }
 
+.about h2 {
+  font-size: 2.7em;
+  font-weight: 600;
+}
+
 .about-image{
   border-radius: 50%;
   width: 6em;
