added minor layout adjustment on project description

--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -201,7 +201,7 @@ section {
 }
 
 .wave {
-  width: 1.4em;
+  width: 1em;
   animation: animate-wave 500ms infinite ease-in-out;
 }
 
@@ -209,9 +209,11 @@ section {
   0% {
     transform: rotate(0);
   }
+
   50% {
     transform: rotate(30deg);
   }
+
   100% {
     transform: rotate(0);
   }
@@ -232,7 +234,7 @@ section {
   animation: fade-up 650ms 400ms backwards;
 }
 
-.about p{
+.about p {
   animation: fade-up 650ms 600ms backwards;
 }
 
@@ -240,10 +242,11 @@ section {
   width: 1.3em;
 }
 
-.social-logo:hover{
+.social-logo:hover {
   opacity: 0.7;
 }
-.about-links{
+
+.about-links {
   display: flex;
   justify-content: center;
   gap: 1em;
@@ -256,6 +259,7 @@ section {
     opacity: 0;
     transform: translateY(40px);
   }
+
   100% {
     opacity: 1;
     transform: translateY(0);
@@ -266,6 +270,7 @@ section {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -318,6 +323,7 @@ section {
   font-size: 20px;
   opacity: 0;
 }
+
 .language:hover .language-name {
   transform: scale(1);
   opacity: 1;
@@ -351,7 +357,7 @@ section {
   gap: 100px;
 }
 
-.project-image{
+.project-image {
   width: 100%;
   transition: all 500ms ease;
 }
@@ -369,9 +375,10 @@ section {
   margin-bottom: 50px;
 }
 
-
 .project-wrapper {
+  display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: var(--clr-secondary);
   margin: 50px;
   border-radius: 20px;
@@ -380,10 +387,10 @@ section {
 }
 
 .project-wrapper:before {
-  content:"";
+  content: "";
   position: absolute;
   top: 0;
-  left:0;
+  left: 0;
   height: 100%;
   width: 100%;
   background-color: #1C1D25;
@@ -392,61 +399,76 @@ section {
   z-index: 2;
 }
 
-.project:hover .project-wrapper:before{
+.project:hover .project-wrapper:before {
   opacity: 0.7;
 }
 
-.project:hover .project-image{
+.project:hover .project-image {
   transform: scale(1.07);
   filter: blur(5px)
 }
 
 .project-description {
   position: absolute;
-  top: 50%;
-  left: 90px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 37%;
+  margin: 50px;
   transform: translateY(100%);
-  max-width: 600px;
   z-index: 3;
   opacity: 0;
   transition: transform 450ms, opacity 300ms;
 }
 
-.project:hover .project-description{
+@media(min-width: 40em) {
+  .project-description {
+    align-items: flex-start;
+  }
+}
+
+.project:hover .project-description {
   opacity: 1;
   transform: translateY(-50%);
 }
 
-.project-description-title{
+.project-description-title {
   font-size: 3em;
 }
 
-.project-description-para{
+.project-description-para {
   margin: 16px 0;
   font-size: 0.9em;
+  display: none;
 }
 
-.project-description-links{
+
+
+.project-description-links {
   display: inline-block;
 }
 
-.project-description-link{
+.project-description-link {
   font-size: 20px;
   font-size: 20px;
   margin-right: 16px;
 }
 
-
-
 .project-description-title,
 .project-description-sub-title,
 .project-description-para,
 .project-description-link {
-  text-align: left;
+  text-align: center;
   color: var(--clr-light);
 }
 
-
+@media(min-width: 40em) {
+  .project-description-para {
+    display: block;
+    text-align: left;
+  }
+}
 
 
 /** FOOTER  */
