--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -46,6 +46,12 @@ ul {
   font-weight: normal;
 }
 
+a{
+  text-decoration: none;
+  position: relative;
+  transition: opacity 300ms ease;
+}
+
 ol,
 ul {
   list-style: none;
@@ -111,6 +117,28 @@ section {
   font-family: var(--ff-accent);
 }
 
+.link-hover-effect:after {
+  content: "";
+  position: absolute;
+  height: 3px;
+  width: 0;
+  bottom: -3px;
+  right: 0;
+  transition: all 300ms ease;
+}
+
+.link-hover-effect--white:after {
+  background-color: #fff;
+}
+.link-hover-effect--black:after {
+  background-color: #000;
+}
+
+.link-hover-effect:hover:after {
+  width: 100%;
+  left: 0;
+}
+
 /* ... */
 
 /** HEADER */
@@ -134,6 +162,12 @@ section {
   justify-content: center;
 }
 
+.nav__link--anchor {
+  margin: 0 12px;
+  color: #242424;
+  font-weight: 700;
+}
+
 
 .btn-contact {
   background-color: var(--clr-primary);
@@ -143,6 +177,11 @@ section {
   text-align: center;
   border: none;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  transition: all 300ms ease;
+}
+
+.btn-contact:hover{
+  background-color: #113dff;
 }
 
 .btn-contact a {
@@ -490,6 +529,10 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.footer-social-link {
+  color: var(--clr-light);
 }
 
 @media(min-width: 40em) {
