--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -12,6 +12,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -505,11 +506,12 @@ section {
   display: flex;
 }
 
-.footer-flex-container {
+.footer-grid-container {
   display: grid;
   grid-template-columns: 1fr;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
+  max-width: 1000px;
 
 }
 
@@ -520,6 +522,7 @@ section {
   align-items: center;
 }
 
+.footer-title,
 .footer-social-link {
   color: var(--clr-light);
 }
