--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -280,6 +280,15 @@ header {
   transform: translateX(-50px);
 }
 
+
+@media(max-width: 30em) {
+  .toggler {
+    position: absolute;
+    top: 10px;
+    right: 3px;
+  }
+}
+
 /** ... */
 
 /** ABOUT */
